// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`disable by comments > on current line 1`] = `
{
  "code": "console.log("%c🚀 comments.js·1%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvc3JjL2NvbW1lbnRzLmpzOjE6MQ==","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')
  console.log('hello javascript2') // turbo-console-disable-line
  ",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,4SAAY;AACZ;AACA",
    "names": [],
    "sources": [
      "/home/runner/src/comments.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`disable by comments > on next line 1`] = `
{
  "code": "console.log("%c🚀 comments.js·1%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvc3JjL2NvbW1lbnRzLmpzOjE6MQ==","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')
  // turbo-console-disable-next-line
  console.log('hello javascript2')
  ",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,4SAAY;AACZ;AACA;AACA",
    "names": [],
    "sources": [
      "/home/runner/src/comments.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`disable by comments > on next line vue 1`] = `
{
  "code": "<template>
  Hello World
</template>

<script setup lang="ts">
  const msg: string = "Hello World"
  console.log(msg) // turbo-console-disable-line
</script>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "/home/runner/src/comments.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`disable by comments > on top of file 1`] = `
{
  "code": "// turbo-console-disable
  console.log('hello javascript')
  console.log('hello javascript2')
  ",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA",
    "names": [],
    "sources": [
      "/home/runner/src/comments.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`disable by comments > on top of svelte file 1`] = `
{
  "code": "<script lang="ts">
// turbo-console-disable
  const a: string = 'Hello'
  console.log(a)
</script>


<h1>Welcome to SvelteKit</h1>
<p>
  Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation
</p>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "/home/runner/src/comments.svelte",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`disable by comments > on top of vue file 1`] = `
{
  "code": "<template>
  Hello World
</template>

<script setup lang="ts">
// turbo-console-disable
  const msg: string = "Hello World"
  console.log(msg)
</script>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "/home/runner/src/comments.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
